# raytracer

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  Scene.cfg  art.txt  scene.cfg  todo.txt
.github/workflows/: cmake-multi-platform.yml  mirror-repo.yml
config/: scene.cfg  triangle.cfg
include/Camera/: Camera.hpp  CameraPlugin.hpp  ICamera.hpp  ICameraFactory.hpp
include/Camera/CameraPlugin/: Camera.hpp  CameraFactory.hpp
include/Core/: DLLoader.hpp  ErrorHandler.hpp  HitRecord.hpp  IPlugin.hpp  IPluginLoader.hpp  PPMLoader.hpp  PluginLoader.hpp  RayTracer.hpp  Scene.hpp  SceneLoader.hpp
include/Core/Factory/: Factory.hpp
include/Core/Observer/: ConsoleProgressObserver.hpp  IObserver.hpp  ISubject.hpp  RenderingSubject.hpp
include/Exception/: Exception.hpp
include/Lights/: AmbientLight.hpp  DirectionalLight.hpp  ILight.hpp  ILightFactory.hpp
include/Lights/AmbientLight/: AmbientLight.hpp  AmbientLightFactory.hpp  AmbientLightPlugin.hpp
include/Lights/DirectionalLight/: DirectionalLight.hpp  DirectionalLightFactory.hpp  DirectionalLightPlugin.hpp
include/Materials/: ChessBoard.hpp  IMaterial.hpp  IMaterialFactory.hpp  Material.hpp
include/Materials/ChessBoard/: ChessBoard.hpp  ChessBoardFactory.hpp  ChessBoardPlugin.hpp
include/Materials/PerlinNoise/: PerlinNoise.hpp  PerlinNoiseFactory.hpp  PerlinNoisePlugin.hpp
include/Math/: Color.hpp  Point3d.hpp  Rectangle3D.hpp  Vector3d.hpp
include/Primitives/: APrimitive.hpp  IPrimitive.hpp  IPrimitiveFactory.hpp
include/Primitives/Shapes/: Cylinder.hpp  Plane.hpp  Sphere.hpp
include/Primitives/Shapes/Cone/: Cone.hpp  ConeFactory.hpp  ConePlugin.hpp
include/Primitives/Shapes/Cylinder/: Cylinder.hpp  CylinderFactory.hpp  CylinderPlugin.hpp
include/Primitives/Shapes/Plane/: Plane.hpp  PlaneFactory.hpp  PlanePlugin.hpp
include/Primitives/Shapes/Sphere/: Sphere.hpp  SphereFactory.hpp  SpherePlugin.hpp
include/Primitives/Shapes/Torus/: Torus.hpp  TorusFactory.hpp  TorusPlugin.hpp
include/Primitives/Shapes/Triangles/: Triangles.hpp  TrianglesFactory.hpp  TrianglesPlugin.hpp
src/: PPMLoader.cpp  main.cpp
src/Camera/: CMakeLists.txt  Camera.cpp  CameraFactory.cpp  CameraPlugin.cpp
src/Core/: Camera.cpp  Camera.hpp  DLLoader.hpp  HitRecord.hpp  ICamera.hpp  PPMLoader.cpp  PluginLoader.cpp  RayTracer.cpp  RayTracer.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/Core/Factory/: Factory.cpp  Factory.hpp
src/Core/Observer/: ConsoleProgressObserver.cpp  RenderingSubject.cpp
src/Exception/: Exception.hpp
src/Lights/: AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  ILight.hpp
src/Lights/Ambient/: AmbientLight.cpp  AmbientLightFactory.cpp  AmbientLightPlugin.cpp  CMakeLists.txt
src/Lights/Directional/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLightFactory.cpp  DirectionalLightPlugin.cpp
src/Materials/: AMaterial.hpp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  Color.cpp  Color.hpp  IMaterial.hpp  Material.hpp  Materials.cpp
src/Materials/ChessBoard/: CMakeLists.txt  ChessBoard.cpp  ChessBoardFactory.cpp  ChessBoardPlugin.cpp
src/Materials/PerlinNoise/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoiseFactory.cpp  PerlinNoisePlugin.cpp
src/Math/: Color.cpp  Math.hpp  Point3d.cpp  Point3d.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Vector3d.cpp  Vector3d.hpp
src/Primitives/: APrimitive.cpp  APrimitive.hpp  CMakeLists.txt  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  IPrimitive.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp
src/Primitives/Plugin/: redSphere.cpp
src/Primitives/Shapes/Cone/: CMakeLists.txt  Cone.cpp  ConeFactory.cpp  ConePlugin.cpp
src/Primitives/Shapes/Cylinder/: CMakeLists.txt  Cylinder.cpp  CylinderFactory.cpp  CylinderPlugin.cpp
src/Primitives/Shapes/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp  PlaneFactory.cpp  PlanePlugin.cpp
src/Primitives/Shapes/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp  SphereFactory.cpp  SpherePlugin.cpp
src/Primitives/Shapes/Torus/: CMakeLists.txt  Torus.cpp  TorusFactory.cpp  TorusPlugin.cpp
src/Primitives/Shapes/Triangles/: CMakeLists.txt  Triangles.cpp  TrianglesFactory.cpp  TrianglesPlugin.cpp
srcPlugin/Primitive/: blueSphere.cpp  grayGround.cpp  greenSphere.cpp  redSphere.cpp
unit_tests/: sample_function_test.cpp
